affectations aux chambres et gestion clients implémenté